fix: fix turbo table layout break in IE11 and Edge

--- a/projects/kaltura-ng/mc-theme/themes/default/scss/primeng/theme.scss
+++ b/projects/kaltura-ng/mc-theme/themes/default/scss/primeng/theme.scss
@@ -332,6 +332,9 @@ textarea.ui-inputtext {
   .ui-table-scrollable-body {
     max-height: none !important;
   }
+  .ui-table-scrollable-body>table>.ui-table-tbody>tr:first-child>td{
+    border-top: 1px solid white;
+  }
 
   .emptymessage{
     text-align: center;
